--- a/src/Components/Authform/Authform.scss
+++ b/src/Components/Authform/Authform.scss
@@ -2,7 +2,7 @@
 .Auth_page{
     background-color: #ffffff;
    
-    height: 100vh;
+    // height: 100vh;
     h1{
         padding: 20px;
         color: rgba(255, 0, 0, 0.705);
