--- a/src/Css/Auth.scss
+++ b/src/Css/Auth.scss
@@ -20,9 +20,9 @@
   
 background-size: 98%; 
   margin: 0px;
-  padding: 20px;
+  padding: 10px;
   
-  height: 100vh;
+  // height: 100vh;
   .box{
     padding: 20px;
     margin: 20%;
@@ -45,7 +45,7 @@ background-size: 98%;
   }
   .left_area {
     width: 25%;
-    height: 100vh;
+    height: 130vh;
 
   }
 
