--- a/src/Css/Home.scss
+++ b/src/Css/Home.scss
@@ -1,13 +1,127 @@
+.profile{
+    img{
+        height: 150px;
+        width: auto;
+        border-radius: 50%;
+    }
+  
+  
+    .info{
+      text-align: left;
+        h3{
+            color: white;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        }
+      
+        h4{
+            color: rgb(0, 225, 255);
+        }
+    }
+  }
+.menu{
+    background-color: #0d1117;
+    display: flex;
+    justify-content: flex-end;
+    h1{
+        color: orangered;
+        letter-spacing: 2px;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  padding: 6px;
+        font-size: 30px;
+    }
+    button{
+       margin-left: auto;
+       background-color: orangered;
+       border: 0px;
+       padding: 10px 20px;
+       color: white;
+       border-radius: 0px;
+       border: 1px solid orangered;
+
+
+       &:hover{
+           cursor: pointer;
+           background-color: #1b1a1a;
+           border: 1px solid orangered;
+           color: orangered;
+       }
+    }
+}
+
+
+.left {
+
+    background-color: #30363d;
+text-align: center;
+  margin: 0px;
+  padding: 20px;
+  align-items: center;
+
+ 
+}
+
+.right {
+  background-color: #1b1f23;
+  
+background-size: 98%; 
+  margin: 0px;
+  padding: 10px;
+  
+  // height: 100vh;
+
+}
 
 // For Mobile View
 @media (max-width: 765px) {
+    .left {
+        // height: 50vh;
+    h1{
+        display: none;
+    }
+    .profile{
+        img{
+            height: 70px;
+            width: auto;
+            border-radius: 50%;
+        }
 
-   
+        h3{
+            font-size: 20px;
+            display: none;
+        }
+    }
+
+      }
+
+      .profile{
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+      }
+
+
 }
-
-
 
 // For Desktop View
 @media (min-width: 765px) {
+  .main {
+    display: flex;
+  }
+  .left {
+    width: 25%;
+    height: 130vh;
 
+  }
+
+  .right {
+    width: 75%;
+    .box{
+      margin: 20%;
+    }
+  }
+
+  .info{
+    padding: 50px 30px;
+  }
 }
+
