--- a/src/Css/Home.scss
+++ b/src/Css/Home.scss
@@ -9,12 +9,12 @@
     .info{
       text-align: left;
         h3{
-            color: white;
+            color: rgb(255, 255, 255);
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         }
       
         h4{
-            color: rgb(0, 225, 255);
+            color: rgb(139, 139, 139);
         }
     }
   }
@@ -22,6 +22,12 @@
     background-color: #0d1117;
     display: flex;
     justify-content: flex-end;
+    img{
+        height: 70px;
+        width: auto;
+        border-radius: 50%;
+    }
+  
     h1{
         color: orangered;
         letter-spacing: 2px;
@@ -74,29 +80,20 @@ background-size: 98%;
 // For Mobile View
 @media (max-width: 765px) {
     .left {
-        // height: 50vh;
-    h1{
-        display: none;
+       display: none;
     }
-    .profile{
-        img{
-            height: 70px;
-            width: auto;
-            border-radius: 50%;
-        }
-
-        h3{
-            font-size: 20px;
+      .menu{
+        justify-content: space-between;
+        padding: 10px;
+        align-items: center;
+        button{
             display: none;
         }
-    }
 
-      }
-
-      .profile{
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
+        h1{
+           width: 50%;
+           font-size: 20px;
+        }
       }
 
 
@@ -106,6 +103,13 @@ background-size: 98%;
 @media (min-width: 765px) {
   .main {
     display: flex;
+    
+  }
+  .menu {
+    
+    img{
+        display: none;
+    }
   }
   .left {
     width: 25%;
@@ -121,7 +125,13 @@ background-size: 98%;
   }
 
   .info{
-    padding: 50px 30px;
+    padding: 30px 30px;
+    margin-top: 20px;
+    border-bottom: 2px solid green;
+    border-radius: 10px;
+    background-color: #2c2c2c6b;
   }
+
+
 }
 
