--- a/src/Css/Home.scss
+++ b/src/Css/Home.scss
@@ -1,20 +1,37 @@
 .profile{
-    img{
-        height: 150px;
-        width: auto;
+    display: flex;
+
+    .imgdiv{
         border-radius: 50%;
+        height: 70px;
+        width: 70px;
+        overflow: hidden;
+        img{
+            height: 70px;
+            width: auto;
+        }
     }
+    
+    border-bottom: 2px solid green;
+    border-radius: 10px;
+    background-color: #2c2c2c6b;
+   padding: 10px;
+   justify-content: space-between;
+    
   
   
     .info{
       text-align: left;
         h3{
             color: rgb(255, 255, 255);
+            font-size: 20px;
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         }
       
         h4{
             color: rgb(139, 139, 139);
+            font-size: 20px;
+
         }
     }
   }
@@ -22,10 +39,17 @@
     background-color: #0d1117;
     display: flex;
     justify-content: flex-end;
-    img{
-        height: 70px;
-        width: auto;
+    .imgdiv{
         border-radius: 50%;
+        height: 70px;
+        width: 70px;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        img{
+            height: 70px;
+            width: auto;
+        }
     }
   
     h1{
@@ -57,17 +81,17 @@
 
 .left {
 
-    background-color: #30363d;
+    background-color: #191a1e;
 text-align: center;
   margin: 0px;
-  padding: 20px;
+//   padding: 20px;
   align-items: center;
 
  
 }
 
 .right {
-  background-color: #1b1f23;
+  background-color: #000000;
   
 background-size: 98%; 
   margin: 0px;
@@ -77,10 +101,34 @@ background-size: 98%;
 
 }
 
+
+
+.block{
+    height: 100vh;
+    width: 100%;
+    }
+
+.Chatrooms{
+    text-align: left;
+    padding: 20px;
+    h2{
+        color: white;
+        word-spacing: 3px;
+        font-size: 15px;
+        text-transform: uppercase;
+    }
+}
 // For Mobile View
 @media (max-width: 765px) {
     .left {
-       display: none;
+    //    display: none;
+    margin: 0px;
+    }
+
+    .Chatrooms{
+h2{
+    margin-left: 30px;
+}
     }
       .menu{
         justify-content: space-between;
@@ -113,7 +161,7 @@ background-size: 98%;
   }
   .left {
     width: 25%;
-    height: 130vh;
+    height: 100vh;
 
   }
 
@@ -124,13 +172,6 @@ background-size: 98%;
     }
   }
 
-  .info{
-    padding: 30px 30px;
-    margin-top: 20px;
-    border-bottom: 2px solid green;
-    border-radius: 10px;
-    background-color: #2c2c2c6b;
-  }
 
 
 }
