--- a/src/Css/Home.scss
+++ b/src/Css/Home.scss
@@ -14,6 +14,7 @@
     
   
     background-color: #30363d;
+    // background-color: aliceblue;
    padding: 10px;
    justify-content: space-between;
     
@@ -32,9 +33,11 @@
   }
 .menu{
     background-color: #0d1117;
+    background-color: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    box-shadow: 0px 10px 30px -10px black;
  
   
     h1{
@@ -77,6 +80,7 @@ text-align: center;
 
 .right {
   background-color: #000000;
+  background-color: rgb(224, 224, 224);
   
 background-size: 98%; 
   margin: 0px;
