--- a/src/Css/Chat.scss
+++ b/src/Css/Chat.scss
@@ -1,4 +1,35 @@
+.isChat{
+    background-color: #0d1117;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    align-items: center;
+    flex-direction: column;
 
+    input{
+        background-color: white;
+        border: 0px;
+        margin: 10px;
+        margin-top: 20px;
+        padding: 8px 20px;
+        outline: 0px;
+        color: orangered;
+    }
+
+    button{
+        background-color: orangered;
+        border: 0px;
+        outline: 0px;
+        padding: 8px 20px;
+        color: white;
+        transition: 0.5s;
+
+        &:hover{
+            background-color: rgb(215, 0, 223);
+            transform: scale(1.1);
+        }
+    }
+}
 // For Mobile View
 @media (max-width: 765px) {
 
