--- a/src/App.css
+++ b/src/App.css
@@ -41,13 +41,13 @@
 
 /* width */
 ::-webkit-scrollbar {
-  width: 5px;
+  width: 1px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px rgba(29, 25, 78, 0); 
-  background-color: #64055f;
+  background-color: #0d1117;
 
 }
  
