--- a/src/Components/Chatrooms/Chatroom.scss
+++ b/src/Components/Chatrooms/Chatroom.scss
@@ -7,19 +7,21 @@
     justify-content: space-between;
     align-items: center;
     background-color: #2c2b2b;
-    border-left: 4px solid #ebebeb;
 
     padding: 10px;
     padding-left: 20px;
 
     
-  background: linear-gradient(to right, rgb(43, 12, 46) 50%, #2c2b2b 50%);
+  background: linear-gradient(to right, rgb(43, 12, 46) 50%, #130d0d00 50%);
   background-size: 200% 100%;
   background-position: right bottom;
   transition: all .5s ease-out;
+//   border: 1px solid rgb(139, 139, 139);
+  border-left: 4px solid #ebebeb00;
+
 
   &:hover {
-    background-position: left bottom;
+    background-position:  bottom  left;
   }
   
 .members{
@@ -63,7 +65,7 @@
         width: 70%;
         overflow: hidden;
         h5{
-            color: rgb(255, 123, 0);
+            color: rgb(255, 255, 255);
             font-size: 22px;
         }
         h6{
