--- a/src/Css/Room.scss
+++ b/src/Css/Room.scss
@@ -1,5 +1,161 @@
 .room{
     background-color: #0d1117;
     height: 100vh;
+
+    .chatblock{
+        display: flex;
+
+        .Chatbox{
+            height: 80vh;
+
+            background-color: #1b1f23;
+            margin: 10px;
+            
+            display: flex;
+            flex-direction: column;
+            .msgs{
+                height: 90%;
+                padding: 10px;
+                overflow-y: scroll;
+                padding-bottom: 150px;
+            }
+            .send{
+                align-items: center;
+                background-color: gray;
+
+                margin-top: auto;
+                input{
+                    
+                    font-size: 20px;
+                    border: 0px;
+                    padding: 5px 10px;
+                    outline: 0px;
+                    color: rgb(0, 0, 0);
+                    border-radius: 20px;
+                    margin: 10px;
+                    background-color: gray;
+                    
+                    &::placeholder{
+                        color: black;
+                    }
+
+                     
+                }
+                button{
+                    // height: 40px;
+                    // width: 40px;
+                    // background-color: orangered;
+                    padding: 6px 0px;
+                    background-color: gray;
+                    border: 0pc;
+                    outline: 0px;
+                    // border-radius: 50%;
+
+                }
+            }
+
+        }
+
+        .Chatmembers{
+            width: 30%;
+            padding: 20px;
+            overflow-y: scroll;
+         
+            h1{
+                color: orangered;
+                font-size: 25px;
+                text-transform: uppercase;
+            }
+            .Admin{
+                background-color: #12161d;
+                padding: 10px;
+                margin: 10px;
+               
+                margin-left: 0px;
+                h1{
+                    color: green;
+                    font-size: 15px;
+                }
+                
+                &:hover{
+                    cursor: pointer;
+                    // transform: scale(1.1);
+                    box-shadow: 0px 6px 20px -10px rgb(6, 69, 88);
+
+                }
+
+            }
+            .Memberblock{
+                display: flex;
+                
+                border-radius: 10px;
+                align-items: center;
+                .mem_info{
+                    padding-left: 10px;
+                    h6{
+                        font-size: 20px;
+                        color: white;
+                    }
+
+                    h2{
+                        font-size: 13px;
+                        color: gray;
+                    }
+                }
+
+               
+               
+                .imgdiv{
+                    border-radius: 50%;
+                    display: flex;
+                    justify-content: center;
+                    height: 60px;
+                    width: 65px;
+                    margin: 10px 0px;
+                    margin-right: 10px;
+                    overflow: hidden;
+                    img{
+                        height: 60px;
+                        width: auto;
+                    }
+                }
+
+            
+            }
+        }
+    }
     
+}
+
+// For Mobile View
+@media (max-width: 765px) {
+    .Chatmembers{
+        display: none;
+    }
+    .Chatbox{
+
+        width: 100%;
+    }
+    .send{
+        
+        input{
+            width:80%;
+        }
+    }
+
+}
+
+@media (min-width: 765px) {
+
+    .Chatbox{
+
+        width: 70%;
+    }
+    .send{
+        
+        input{
+            width: 90%;
+        }
+    }
+
 }
