--- a/src/Components/Roommenu/Roommenu.scss
+++ b/src/Components/Roommenu/Roommenu.scss
@@ -65,6 +65,13 @@
 
 }
 
+.dots{
+    i{
+        font-size: 20px;
+        color: gray;
+    }
+}
+
 
 // For Mobile View
 @media (max-width: 765px) {
