--- a/src/Components/Chatrooms/Chatroom.scss
+++ b/src/Components/Chatrooms/Chatroom.scss
@@ -36,14 +36,14 @@
 }
  
     .imgdiv{
-        border-radius: 10px;
+        border-radius: 50%;
         display: flex;
         justify-content: center;
         height: 60px;
         width: 65px;
         margin: 10px 0px;
         margin-right: 10px;
-        border: 1px solid rgb(18, 127, 146);
+        // border: 2px solid rgb(0, 0, 0);
         overflow: hidden;
         img{
             height: 60px;
