--- a/src/Css/Home.scss
+++ b/src/Css/Home.scss
@@ -41,7 +41,9 @@
  
   
     h1{
-        color: orangered;
+        color: rgba(255, 0, 0, 0.993);
+        text-transform: uppercase;
+        font-weight: 600;
         letter-spacing: 2px;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         padding: 6px;
