Room Heade4r Created 5

--- a/src/Css/Home.scss
+++ b/src/Css/Home.scss
@@ -116,6 +116,11 @@ background-size: 98%;
     }
 }
 
+.log{
+  margin-left: auto;
+
+}
+
 .Rooms{
     // margin-top: 20px;
 }
@@ -124,7 +129,7 @@ background-size: 98%;
     .left {
     //    display: none;
     margin: 0px;
-    height: 90vh;
+    height: 95vh;
     overflow-y: scroll;
 
     }
