Room Heade4r Created 6

--- a/src/Css/Home.scss
+++ b/src/Css/Home.scss
@@ -118,6 +118,12 @@ background-size: 98%;
 
 .log{
   margin-left: auto;
+  position: relative;
+  left: 60px;
+  button{
+    border-radius: 10px;
+    background-color: #fff;
+  }
 
 }
 
