Room Heade4r Created 9

--- a/src/Css/Home.scss
+++ b/src/Css/Home.scss
@@ -122,7 +122,7 @@ background-size: 98%;
   left: 30px;
   button{
     border-radius: 10px;
-    background-color: #fff;
+    background-color: rgb(221, 221, 221);
   }
 
 }
