--- a/src/Components/Message/Message.scss
+++ b/src/Components/Message/Message.scss
@@ -21,6 +21,7 @@
     padding: 10px;
     margin-bottom: 20px;
     box-shadow: 0px 10px 20px -10px black;
+    overflow: hidden;
     
     h1{
         font-size: 15px;
