--- a/src/Components/Roommenu/Roommenu.scss
+++ b/src/Components/Roommenu/Roommenu.scss
@@ -36,31 +36,7 @@
         }
     }
 
-    .roombtns{
-        margin-left: auto;
-        button{
-            background-color: orangered;
-            border: 0px;
-            padding: 10px 20px;
-            margin: 10px;
-            border-radius: 40px;
-            color: white;
-            background: linear-gradient(to left, rgb(253, 0, 0) 50%, rgb(234, 0, 255) 50%);
-            background-size: 200% 100%;
-            background-position: right bottom;
-            transition: all .5s ease-out;
-            margin-left: 30px;
-          
-            &:hover {
-              background-position: left bottom;
-                          transform: scale(1.1);
-    
-            }
-     
-           
-         }
-
-    }
+   
 
 
 }
@@ -113,6 +89,54 @@
         }
 
     }
+}
+
+.roombtns {
+    margin-left: auto;
+
+}
+
+.roombtns , .leave{
+    button{
+        background-color: orangered;
+        border: 0px;
+        padding: 10px 20px;
+        margin: 10px;
+        border-radius: 10px;
+        color: white;
+        background: linear-gradient(to left, rgb(253, 0, 0) 50%, rgb(234, 0, 255) 50%);
+        background-size: 200% 100%;
+        background-position: right bottom;
+        transition: all .5s ease-out;
+        margin-left: 30px;
+      
+        &:hover {
+          background-position: left bottom;
+                      transform: scale(1.1);
+
+        }
+ 
+       
+     }
+
+}
+
+.leave{
+    h1{
+        color: gray;
+        font-size: 25px;
+        text-transform: uppercase;
+    }
+h3{
+color: red;
+font-size: 15px;
+padding-top: 30px;
+}
+button{
+    width: 100%;
+    margin-left: 0px;
+    margin: 40px 0px;
+}
 }
 
 .dots{
