--- a/src/Components/Block/Block.scss
+++ b/src/Components/Block/Block.scss
@@ -1,5 +1,5 @@
 .Chatblock{
-    background-color: #0d1117;
+    background-color: #fafafa;
     height: 100vh;
     .Buttons{
         text-align: center;
