--- a/src/Components/Chatrooms/Chatroom.scss
+++ b/src/Components/Chatrooms/Chatroom.scss
@@ -7,32 +7,50 @@
     justify-content: space-between;
     align-items: center;
     background-color: #2c2b2b;
+    background-color: #fff;
 
     padding: 10px;
     padding-left: 20px;
 margin: 10px;
-border-radius: 10px;
+border-radius: 5px;
     
-  background: linear-gradient(to right, rgb(43, 12, 46) 50%, #0d1117 50%);
+  background: linear-gradient(to right, rgb(46, 13, 12) 50%, #ffffff 50%);
   background-size: 200% 100%;
   background-position: right bottom;
   transition: all .5s ease-out;
 //   border: 1px solid rgb(139, 139, 139);
-  border-left: 1px solid #c0c0c000;
-
+  border-left: 1px solid #ffffff;
+color: black;
 backdrop-filter: blur(1.5);
   &:hover {
-    background-position:  bottom  left;
+    // background-position:  bottom  left;
+    box-shadow: 0px 10px 30px -10px rgb(129, 122, 122);
   }
   
 .members{
     h6{
         color: rgb(104, 103, 103);
+        font-size: 13px;
     }
-    img{
-        height: 35px;
-        width: auto;
-        border-radius: 50%;
+  
+    .memberss{
+        display: flex;
+            
+
+            img{
+                border: 4px solid rgb(238, 238, 238);
+                width: 40px;
+                height: 39px;
+                // width: auto;
+                border-radius: 50%;
+    
+             
+    
+            }
+        .memimg{
+            width: 30px;
+
+        }
     }
 }
  
@@ -45,6 +63,7 @@ backdrop-filter: blur(1.5);
         margin: 10px 0px;
         margin-right: 10px;
         // border: 2px solid rgb(0, 0, 0);
+       
         overflow: hidden;
         img{
             height: 60px;
@@ -54,7 +73,7 @@ backdrop-filter: blur(1.5);
 
     &:hover{
         cursor: pointer;
-        border-left: 4px solid orangered;
+        // border-left: 4px solid orangered;
 
         .overlay{
             width: 100%;
@@ -66,7 +85,7 @@ backdrop-filter: blur(1.5);
         width: 70%;
         overflow: hidden;
         h5{
-            color: rgb(255, 255, 255);
+            color: rgb(255, 0, 0);
             font-size: 22px;
         }
         h6{
