--- a/src/Css/Home.scss
+++ b/src/Css/Home.scss
@@ -59,7 +59,7 @@
   
     h1{
         color: rgba(255, 0, 0, 0.993);
-        text-transform: uppercase;
+        // text-transform: uppercase;
         font-weight: 600;
         letter-spacing: 2px;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -72,18 +72,18 @@
 
     }
     button{
-       background-color: orangered;
+       background-color: rgb(255, 255, 255);
        border: 0px;
        padding: 10px 20px;
        margin: 10px;
        border-radius: 40px;
-       color: white;
+       color: rgb(255, 0, 0);
 
 
        &:hover{
            cursor: pointer;
-          box-shadow: 0px 10px 20px -10px black;
-           color: rgb(0, 255, 21);
+          box-shadow: 0px 10px 20px -10px rgb(187, 18, 18);
+           color: rgb(0, 0, 0);
        }
     }
 }
@@ -92,6 +92,8 @@
 .left {
 
     background-color: #1b1f23;
+    background-color: rgb(230, 228, 228);
+
 text-align: center;
   margin: 0px;
 //   padding: 20px;
@@ -101,8 +103,9 @@ text-align: center;
 }
 
 .right {
-  background-color: #000000;
-  background-color: #0d1117;
+ 
+  background-color: rgb(230, 228, 228);
+
   
 background-size: 98%; 
   margin: 0px;
@@ -129,7 +132,7 @@ background-size: 98%;
 
         word-spacing: 3px;
         font-size: 15px;
-        text-transform: uppercase;
+        // text-transform: uppercase;
     }
 }
 
@@ -163,9 +166,13 @@ background-size: 98%;
   .profile{
   background-color: rgb(194, 194, 194);
   color: black;
+  display: none;
+  }
+  .chatbx{
+    background-color: #ffffff;
   }
     .left {
-    //    display: none;
+    // display: none;
     margin: 0px;
     height: 95vh;
     overflow-y: scroll;
@@ -238,13 +245,19 @@ h1{
 
 .dropdown{
   ul{
+    padding: 30px 10px;
     li{
+      display: flex;
+      justify-content: space-between;
+      padding-right: 10px;
+      align-items: center;
+      i{
+        color: rgb(148, 148, 148);
+        margin-left: 10px;
+      }
       a{
         font-size: 20px;
-        i{
-          color: rgb(148, 148, 148);
-          margin-left: 10px;
-        }
+      
       }
     }
   }
