--- a/src/App.css
+++ b/src/App.css
@@ -41,20 +41,21 @@
 
 /* width */
 ::-webkit-scrollbar {
-  width: 1px;
+  width: 6px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px rgba(29, 25, 78, 0); 
-  background-color: #0d1117;
+  /* background-color: #ffffff; */
 
 }
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgb(4, 197, 240); 
-  border-radius: 0px;
+  background: rgb(184, 184, 184); 
+  border-radius: 10px;
+  height: 20px;
 }
 
 /* Handle on hover */
