--- a/src/Css/Room.scss
+++ b/src/Css/Room.scss
@@ -9,7 +9,7 @@
             height: 85vh;
           
 
-            background-color: #1b1f23;
+            background-color: #ffffff;
             
             display: flex;
             flex-direction: column;
