--- a/src/Css/Chat.scss
+++ b/src/Css/Chat.scss
@@ -5,11 +5,11 @@
     height: 100vh;
     align-items: center;
     flex-direction: column;
+    margin-top: 20px;
 
     input{
         background-color: white;
         border: 0px;
-        margin: 10px;
         margin-top: 20px;
         padding: 8px 20px;
         outline: 0px;
