--- a/src/Components/Message/Message.scss
+++ b/src/Components/Message/Message.scss
@@ -47,6 +47,7 @@
             display: flex;
             justify-content: flex-start;
             
+            align-items: flex-end;
 
             
 
@@ -57,6 +58,7 @@
         }
     .right{
     display: flex;
+    align-items: flex-end;
     background-color: #ffffff;
     padding: 0px;
     }
@@ -146,6 +148,7 @@
 .room .chatblock .Chatbox .msgs {
     height: 90%;
     padding: 10px;
-    overflow: hidden;
+     overflow-y: scroll; 
     padding-bottom: 150px;
+    overflow-x: hidden;
 }
