--- a/src/Components/Message/Message.scss
+++ b/src/Components/Message/Message.scss
@@ -31,6 +31,7 @@
     h1{
         font-size: 15px;
 
+
     }
 
     h6{
@@ -108,7 +109,7 @@
         }
 @media (max-width: 765px) {
     .Message_box{
-        width: 60%;
+        // width: 60%;
     }
    
 }
@@ -116,7 +117,7 @@
 @media (min-width: 765px) {
 
     .Message_box{
-        width: 50%;
+        // width: 50%;
     }
 
    
