--- a/src/Css/Room.scss
+++ b/src/Css/Room.scss
@@ -21,7 +21,7 @@
             }
             .send{
                 align-items: center;
-                background-color: gray;
+                background-color: rgb(248, 248, 248);
                 margin: 0px;
 
                 margin-top: auto;
